--- a/proyek/aipri.html
+++ b/proyek/aipri.html
@@ -39,22 +39,22 @@
 									<hr width="100%">
 									<ul class="actions">
 										<center>
-										<li><a class="button">Episode - 1</a></li>
+										<!--<li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="http://filefenix.com/mhtL/[PeA-Works]_New_Game!!_-_01_[B0E9E6AB].mkv" class="button"> Filefenix </a>
-										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8TER2eGJVLWpsOGs" class="button"> Google Drive </a>
-										<a href="https://mega.nz/#!dj4jxCrK!zfitATl_z5quo4Dqzu6W27AABAoxrlfGS3fPuPAA3Zk" class="button"> MEGA </a>
-										<a href="https://www.solidfiles.com/v/m3mg7DM2QBx3r" class="button"> Solidfiles </a>
+										<a href="" class="button"> Filefenix </a>
+										<a href="" class="button"> Google Drive </a>
+										<a href="" class="button"> MEGA </a>
+										<a href="" class="button"> Solidfiles </a>
 										</p></li>
 										<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
-										<a href="http://filefenix.com/mhtL/[PeA-Works]_New_Game!!_-_01_[B0E9E6AB].mkv" class="button"> Filefenix </a>
-										<a href="https://drive.google.com/open?id=0B4UlLVMNecG8TER2eGJVLWpsOGs" class="button"> Google Drive </a>
-										<a href="https://mega.nz/#!dj4jxCrK!zfitATl_z5quo4Dqzu6W27AABAoxrlfGS3fPuPAA3Zk" class="button"> MEGA </a>
-										<a href="https://www.solidfiles.com/v/m3mg7DM2QBx3r" class="button"> Solidfiles </a>
-										</p></li>
+										<a href="" class="button"> Filefenix </a>
+										<a href="" class="button"> Google Drive </a>
+										<a href="" class="button"> MEGA </a>
+										<a href="" class="button"> Solidfiles </a>
+										</p></li>-->
 										</center>
 									</ul>
 								</div>
