--- a/proyek/arsip-biru.html
+++ b/proyek/arsip-biru.html
@@ -4,8 +4,8 @@
 -->
 <html>
 	<head>
-		<title>[NERU] Blue Archive | Arsip</title>
-		<link href="../images/065.png" rel="shortcut icon" />
+		<title>[???] Blue Archive | Arsip</title>
+		<link href="../images/066.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
