--- a/spring2024.html
+++ b/spring2024.html
@@ -8,6 +8,19 @@
 		<link href="images/066.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://karameru.web.id/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Caramel - Anime Fansub Indonesia">
+		<meta property="og:description" content="">
+		<meta property="og:image" content="">
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="karameru.web.id">
+		<meta property="twitter:url" content="https://karameru.web.id/">
+		<meta name="twitter:title" content="Caramel - Anime Fansub Indonesia">
+		<meta name="twitter:description" content="">
+		<meta name="twitter:image" content="">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
