--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -10,13 +10,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:url" content="https://karameru.web.id/">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="Caramel - Anime Fansub Indonesia">
+		<meta property="og:title" content="Caramel - Fansub manis tapi tukang delay">
 		<meta property="og:description" content="">
 		<meta property="og:image" content="">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta property="twitter:domain" content="karameru.web.id">
 		<meta property="twitter:url" content="https://karameru.web.id/">
-		<meta name="twitter:title" content="Caramel - Anime Fansub Indonesia">
+		<meta name="twitter:title" content="Caramel - Fansub manis tapi tukang delay">
 		<meta name="twitter:description" content="">
 		<meta name="twitter:image" content="">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
