--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Caramel] Ookami to Koushinryou | Arsip</title>
+		<title>[Caramel] Ookami to Koushinryou (2024) | Arsip</title>
 		<link href="../images/066.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,7 +33,7 @@
 								<ul class="actions">
 								<li><a href="../spring2024.html" class="button scrolly"><< KEMBALI</a>
 							</ul>
-									<align="left"><h2>Ookami to Koushinryou - Takarir Indonesia</h2>
+									<align="left"><h2>Ookami to Koushinryou (2024) - Takarir Indonesia</h2>
 									<br>
 										<div class="image left" style="clear: both; text-align: center;">
 											<img border="0" height="316" src="https://cdn.myanimelist.net/images/anime/1792/136743l.jpg" width="225" />
