--- a/lawas.html
+++ b/lawas.html
@@ -32,7 +32,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="index.html">BERANDA</a></li>
+							<li><a href="/">BERANDA</a></li>
 							<li><a href="spring2024.html">GARAPAN MUSIM INI</a></li>
 							<li><a href="proyek/kemah-santai-s3.html">GARAPAN LAMA</a></li>
 						</ul>
