--- a/proyek/aipri.html
+++ b/proyek/aipri.html
@@ -41,9 +41,9 @@
 										<br>
 								<p class="relawan">Penerjemah: rinnn
 									<br>Penyunting: H4ru
-									<br>Pengatur waktu: Ikuhara
-									<br>Typesetter: Ikuhara, rinnn
-									<br>KFX: Ikuhara, rinnn
+									<br>Pengatur waktu: -
+									<br>Typesetter: rinnn
+									<br>KFX: rinnn
 									<br>Pengolah video: H4ru
 									<br>Penyelaras akhir: -
 								</p>
