--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -39,13 +39,13 @@
 											<img border="0" height="316" src="https://cdn.myanimelist.net/images/anime/1792/136743l.jpg" width="225" />
 										</div>
 										<br>
-								<p class="relawan">Penerjemah: Ikuhara
-									<br>Penyunting: rinnn
+								<p class="relawan">Penerjemah: rinnn
+									<br>Penyunting: kresbayyy
 									<br>Pengatur waktu: -
 									<br>Typesetter: rinnn
 									<br>KFX: rinnn
-									<br>Pengolah video: kresbayyy
-									<br>Penyelaras akhir: kresbayyy
+									<br>Pengolah video: anon
+									<br>Penyelaras akhir: -
 								</p>
 									<hr width="100%">
 									<ul class="actions">
