--- a/lawas.html
+++ b/lawas.html
@@ -58,12 +58,16 @@
 							<br>
 							<ul class="actions">
 								<li>
-								<a href="proyek/apri.html" a class="button scrolly">Himitsu no AiPri</a>
-								<a href="proyek/holo-remake.html" a class="button scrolly">Ookami to Koushinryou</a>
-								<a href="proyek/kemah-santai-s3.html" a class="button scrolly">Yuru Camp△ Season 3</a>
-								<a href="proyek/apri.html" a class="button scrolly">Himitsu no AiPri</a>
-								<a href="proyek/holo-remake.html" a class="button scrolly">Ookami to Koushinryou</a>
-								<a href="proyek/kemah-santai-s3.html" a class="button scrolly">Yuru Camp△ Season 3</a></li>
+								<a href="2023.html" a class="button scrolly">2023</a>
+								<a href="2022.html" a class="button scrolly">2022</a>
+								<a href="2021.html" a class="button scrolly">2021</a>
+								<a href="2020.html" a class="button scrolly">2020</a>
+								<a href="2019.html" a class="button scrolly">2019</a>
+								<a href="2018.html" a class="button scrolly">2018</a>
+								<a href="2017.html" a class="button scrolly">2017</a>
+								<a href="lawas2.html" a class="button scrolly">Sebelum 2017</a>
+								<a href="other.html" a class="button scrolly">Movie/OVA/Lainnya</a>
+								<a href="mv-pv.html" a class="button scrolly">MV/PV</a></li>
 							</ul>
 						</div>
 					</section>
