--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -50,15 +50,15 @@
 									<hr width="100%">
 									<ul class="actions">
 										<center>
-										<!--<li><a class="button">Episode - 1</a></li>
+										<li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="" class="button"> Filefenix </a>
-										<a href="" class="button"> Google Drive </a>
-										<a href="" class="button"> MEGA </a>
-										<a href="" class="button"> Solidfiles </a>
+										<a href="https://drive.google.com/file/d/1utl2vjAQ765iY4ZQVxrR0CbKBhoxJepd/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/6w9JKwgOuG" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/HqFHr7" class="button"> MiteDrive </a>
+										<a href="" class="button"> Qiwi </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
+										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="" class="button"> Filefenix </a>
