fix relawan + add epi1

--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -40,8 +40,8 @@
 										</div>
 										<br>
 								<p class="relawan">Penerjemah: rinnn
-									<br>Penyunting: kresbayyy
-									<br>Pengatur waktu: -
+									<br>Penyunting: mendingturu
+									<br>Pengatur waktu: anon
 									<br>Typesetter: rinnn
 									<br>KFX: rinnn
 									<br>Pengolah video: anon
