--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -56,7 +56,7 @@
 										<a href="https://drive.google.com/file/d/1utl2vjAQ765iY4ZQVxrR0CbKBhoxJepd/view?usp=sharing" class="button"> GDrive </a>
 										<a href="https://goaibox.com/a-sl/6w9JKwgOuG" class="button"> Terabox </a>
 										<a href="https://mitedrive.com/view/HqFHr7" class="button"> MiteDrive </a>
-										<a href="" class="button"> Qiwi </a>
+										<a href="https://qiwi.gg/file/7ywG4476-CaramelOokamitoKoushinryou2024-019B0AD089" class="button"> Qiwi </a>
 										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
