--- a/proyek/kemah-santai-s3.html
+++ b/proyek/kemah-santai-s3.html
@@ -24,11 +24,10 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body>
+	<body style="background-image: url(../images/rin-p.jpg);">
 <!-- One -->		
 
-										<div style="clear: both;text-align: center; background-image: url(../images/rin-p.jpg); background-size: 30%;">
-											<img border="0" src="../images/rin-p.jpg" style="opacity: 0;">
+										<div style="clear: both;text-align: center;">
 										</div>
 										
 						<!-- Scripts -->
