--- a/proyek/kemah-santai-s3.html
+++ b/proyek/kemah-santai-s3.html
@@ -24,7 +24,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body style="background-image: url(../images/rin-p.jpg);">
+	<body style="background-image: url(../images/rin-p.jpg); background-size: 30%;">
 <!-- One -->		
 
 										<div style="clear: both;text-align: center;">
