--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -58,7 +58,15 @@
 										<a href="https://mitedrive.com/view/HqFHr7" class="button"> MiteDrive </a>
 										<a href="https://qiwi.gg/file/7ywG4476-CaramelOokamitoKoushinryou2024-019B0AD089" class="button"> Qiwi </a>
 										</p></li>
-										<!--<li><a class="button">Episode - 2</a></li>
+										<li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1lvsJ8arnVfnon8FUnaH1DfCnWWWGmq1g/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/70xFaf8dhF" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/dsQnDo" class="button"> MiteDrive </a>
+										<a href="https://qiwi.gg/file/ntNX3909-CaramelOokamitoKoushinryou2024-023911A2B7" class="button"> Qiwi </a>
+										</p></li>
+										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="" class="button"> Filefenix </a>
