--- a/spring2024.html
+++ b/spring2024.html
@@ -36,6 +36,7 @@
 							<li><a href="spring2024.html">GARAPAN MUSIM INI</a></li>
 							<li><a href="proyek/kemah-santai-s3.html">GARAPAN LAMA</a></li>
 							<li><a href="https://panel.naoti.me/embed?id=206398682172489728#accent=yellow">STATUS GARAPAN</a></li>
+							<li><a href="https://trakteer.id/caramelfansub">MAU DONASI?</a></li>
 						</ul>
 					</nav>
 										<li>	
