--- a/proyek/aipri.html
+++ b/proyek/aipri.html
@@ -41,24 +41,23 @@
 										<br>
 								<p class="relawan">Penerjemah: rinnn
 									<br>Penyunting: H4ru
-									<br>Pengatur waktu: -
+									<br>Pengatur waktu: rinnn
 									<br>Typesetter: rinnn
 									<br>KFX: rinnn
-									<br>Pengolah video: H4ru
+									<br>Video: NanDesuKa
 									<br>Penyelaras akhir: -
 								</p>
 									<hr width="100%">
 									<ul class="actions">
 										<center>
-										<!--<li><a class="button">Episode - 1</a></li>
+										<li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="" class="button"> Filefenix </a>
-										<a href="" class="button"> Google Drive </a>
-										<a href="" class="button"> MEGA </a>
-										<a href="" class="button"> Solidfiles </a>
+										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/ET7XpO_AXlNDjDc7e5diUB4BCeM_CALdN5jPWE2P_TIcFw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=V3a5Ik&download=1" class="button"> OneDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Himitsu%20no%20AiPri/%5BCaramel%5D%20Himitsu%20no%20AiPri%20-%2001%20%5B1080p%20E-AC-3%5D%20%5B4F9ED798%5D.mkv" class="button"> DDL </a>
+										<a href="https://teraboxapp.com/s/1TDZOZW2eo8HzcePIFPbkug" class="button"> Terabox </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
+										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="" class="button"> Filefenix </a>
