--- a/proyek/arsip-biru.html
+++ b/proyek/arsip-biru.html
@@ -51,15 +51,15 @@
 									<hr width="100%">
 									<ul class="actions">
 										<center>
-										<!--<li><a class="button">Episode - 1</a></li>
+										<li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="" class="button"> Filefenix </a>
-										<a href="" class="button"> Google Drive </a>
-										<a href="" class="button"> MEGA </a>
-										<a href="" class="button"> Solidfiles </a>
+										<a href="https://drive.google.com/file/d/1Wz_KYRIGR68_6p8zRqiiYoP4jNjkShgc/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://mitedrive.com/view/q1XH00" class="button"> MiteDrive </a>
+										<a href="https://terabox.com/s/1HlYZep_tOnrC_CGTVQRMWg" class="button"> Terabox </a>
+										<a href="https://pixeldrain.com/u/LoVkVCMe" class="button"> PixelDrain </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
+										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="" class="button"> Filefenix </a>
