--- a/proyek/arsip-biru.html
+++ b/proyek/arsip-biru.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[???] Blue Archive | Arsip</title>
+		<title>[Hametsu no Ai] Blue Archive | Arsip</title>
 		<link href="../images/066.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
