--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -66,6 +66,14 @@
 										<a href="https://mitedrive.com/view/dsQnDo" class="button"> MiteDrive </a>
 										<a href="https://qiwi.gg/file/ntNX3909-CaramelOokamitoKoushinryou2024-023911A2B7" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1bsHeyFGGz9lRnER9qcqOFKyfLix-MT5c/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/76kSrNWbqp" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/0DY7su" class="button"> MiteDrive </a>
+										<a href="https://qiwi.gg/file/ei8F5096-CaramelOokamitoKoushinryou2024-038728620D" class="button"> Qiwi </a>
+										</p></li>		
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
