--- a/proyek/arsip-biru.html
+++ b/proyek/arsip-biru.html
@@ -59,6 +59,14 @@
 										<a href="https://terabox.com/s/1HlYZep_tOnrC_CGTVQRMWg" class="button"> Terabox </a>
 										<a href="https://pixeldrain.com/u/LoVkVCMe" class="button"> PixelDrain </a>
 										</p></li>
+										<li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1zk7jvB4YMNJ6RE275FtVd91KHmgcMtaG/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://mitedrive.com/view/0FhIib" class="button"> MiteDrive </a>
+										<a href="https://terabox.com/s/1xt2o9WQMbIKlzmP-_cF0Uw" class="button"> Terabox </a>
+										<a href="https://pixeldrain.com/u/mF5XqTUa" class="button"> PixelDrain </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
