--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -73,7 +73,15 @@
 										<a href="https://goaibox.com/a-sl/76kSrNWbqp" class="button"> Terabox </a>
 										<a href="https://mitedrive.com/view/0DY7su" class="button"> MiteDrive </a>
 										<a href="https://qiwi.gg/file/ei8F5096-CaramelOokamitoKoushinryou2024-038728620D" class="button"> Qiwi </a>
-										</p></li>		
+										</p></li>
+										<li><a class="button">Episode - 4</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1x_VZz-yAZrZCT6SbXrnqlaMNTyosWaOB/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7CnyiwzTKV" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/EoD0v9" class="button"> MiteDrive </a>
+										<a href="https://qiwi.gg/file/oYZr4922-CaramelOokamitoKoushinryou2024-04321E8646" class="button"> Qiwi </a>
+										</p></li>			
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
