--- a/proyek/aipri.html
+++ b/proyek/aipri.html
@@ -65,6 +65,14 @@
 										<a href="https://files.h4ru.my.id/1:/Himitsu%20no%20AiPri/%5BCaramel%5D%20Himitsu%20no%20AiPri%20-%2002%20%5B1080p%20E-AC-3%5D%20%5BE5B08A8D%5D.mkv" class="button"> DDL </a>
 										<a href="https://teraboxapp.com/s/1vFdxGVDnV9mtBmKgchVm4A" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1f7um-1VsfGNcim0fxnTpiOeg1-vhfSuW/view?usp=drive_link" class="button"> GDrive </a>
+										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/EdbIYoeapKhIspSLuXY-RoUBeqerEOlKkEd6-xMaV5KmLA?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=5CzYtr&download=1" class="button"> OneDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Himitsu%20no%20AiPri/%5BCaramel%5D%20Himitsu%20no%20AiPri%20-%2003%20%5B1080p%20E-AC-3%5D%20%5B6A56EFAC%5D.mkv" class="button"> DDL </a>
+										<a href="https://teraboxapp.com/s/1Tz1q1UJo8HauEByIcJmANQ" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
