--- a/spring2024.html
+++ b/spring2024.html
@@ -61,6 +61,7 @@
 								<a href="proyek/arsip-biru.html" a class="button scrolly">Blue Archive</a>
 								<a href="proyek/aipri.html" a class="button scrolly">Himitsu no AiPri</a>
 								<a href="proyek/holo-remake.html" a class="button scrolly">Ookami to Koushinryou</a>
+								<a href="proyek/sasakoi.html" a class="button scrolly">Sasayaku You ni Koi wa Utau</a>
 								<a href="proyek/kemah-santai-s3.html" a class="button scrolly">Yuru Camp△ Season 3</a>
 							</li>
 							</ul>
