--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -89,6 +89,14 @@
 										<a href="https://goaibox.com/a-sl/7IUyojIoDV" class="button"> Terabox </a>
 										<a href="https://mitedrive.com/view/25xLl5" class="button"> MiteDrive </a>
 										<a href="https://qiwi.gg/file/w6jF4676-CaramelOokamitoKoushinryou2024-0579B27132" class="button"> Qiwi </a>
+										</p></li>
+										<li><a class="button">Episode - 6</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1Rg7HTU4l2-1ehFqI55CV7zReasiXok09/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7OCFdySlZa" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/5lknVc" class="button"> MiteDrive </a>
+										<a href="https://qiwi.gg/file/b8CD5721-CaramelOokamitoKoushinryou2024-060BC3BCEB" class="button"> Qiwi </a>
 										</p></li>			
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
