--- a/proyek/sasakoi.html
+++ b/proyek/sasakoi.html
@@ -57,6 +57,20 @@
 										<a href="https://drive.google.com/file/d/1wzVcYaZmcaymuYf4tb5mrCGnRr3I679S/view?usp=sharing" class="button"> GDrive </a>
 										<a href="https://goaibox.com/a-sl/7K6FP5P3zZ" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://mir.cr/N1RSP1E0" class="button"> Mirror </a>
+										<a href="https://drive.google.com/file/d/1omVo-zuuuYDUaKw5LLrlUfWVok8DM9KO/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7RSSuc2EZ0" class="button"> Terabox </a>
+										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://mir.cr/1XGCH0YD" class="button"> Mirror </a>
+										<a href="https://drive.google.com/file/d/1UXnT8V_ooipfgmCb6slDsttec8QndzUv/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7RSbPS6q2i" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
