--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -98,6 +98,14 @@
 										<a href="https://mitedrive.com/view/5lknVc" class="button"> MiteDrive </a>
 										<a href="https://qiwi.gg/file/b8CD5721-CaramelOokamitoKoushinryou2024-060BC3BCEB" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 7</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1I8d3coFLISDTOxikCMFn8LFw72agU74X/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7U6hHqDiWa" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/Fir1wI" class="button"> MiteDrive </a>
+										<a href="https://qiwi.gg/file/9jMT4665-CaramelOokamitoKoushinryou2024-0726358312" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
