--- a/proyek/sasakoi.html
+++ b/proyek/sasakoi.html
@@ -71,6 +71,13 @@
 										<a href="https://drive.google.com/file/d/1UXnT8V_ooipfgmCb6slDsttec8QndzUv/view?usp=sharing" class="button"> GDrive </a>
 										<a href="https://goaibox.com/a-sl/7RSbPS6q2i" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 4</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://mir.cr/00DDXKQY" class="button"> Mirror </a>
+										<a href="https://drive.google.com/file/d/1ecCK22IWeDogNaub9nd9hIXoLbCFk756/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7V9qD2OCyu" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
