--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -106,6 +106,14 @@
 										<a href="https://mitedrive.com/view/Fir1wI" class="button"> MiteDrive </a>
 										<a href="https://qiwi.gg/file/9jMT4665-CaramelOokamitoKoushinryou2024-0726358312" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 8</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1U6OzLZwHaUqfIQpD1TObKH15YAHp2iRc/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7ZnGophSIv" class="button"> Terabox </a>
+										<a href="##" class="button"> <s>MiteDrive</s> </a>
+										<a href="https://qiwi.gg/file/vmLT0136-CaramelOokamitoKoushinryou2024-0833423563" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
