--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -111,7 +111,7 @@
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="https://drive.google.com/file/d/1U6OzLZwHaUqfIQpD1TObKH15YAHp2iRc/view?usp=sharing" class="button"> GDrive </a>
 										<a href="https://goaibox.com/a-sl/7ZnGophSIv" class="button"> Terabox </a>
-										<a href="##" class="button"> <s>MiteDrive</s> </a>
+										<s class="button">MiteDrive</s>
 										<a href="https://qiwi.gg/file/vmLT0136-CaramelOokamitoKoushinryou2024-0833423563" class="button"> Qiwi </a>
 										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
