--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -114,6 +114,14 @@
 										<a href="https://mitedrive.com/view/rDP64M" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/vmLT0136-CaramelOokamitoKoushinryou2024-0833423563" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 9</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1TDV6Vzl4OGQe-2Pj_3v9SSLDsptvi-gQ/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7fovBBBHAo" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/fLgH3D" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/6EPg3636-CaramelOokamitoKoushinryou2024-094FC5D28E" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
