--- a/proyek/arsip-biru.html
+++ b/proyek/arsip-biru.html
@@ -67,6 +67,14 @@
 										<a href="https://terabox.com/s/1xt2o9WQMbIKlzmP-_cF0Uw" class="button"> Terabox </a>
 										<a href="https://pixeldrain.com/u/mF5XqTUa" class="button"> PixelDrain </a>
 										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/19nmUS5YhXYPpyrNEMFvkUkuJpCZNh87D/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://mitedrive.com/view/bUEeF1" class="button"> MiteDrive </a>
+										<a href="https://terabox.com/s/1HNOSCz4T3TelKaKHC1XwMg" class="button"> Terabox </a>
+										<a href="https://pixeldrain.com/u/ymJ2hJYx" class="button"> PixelDrain </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
