--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -122,6 +122,14 @@
 										<a href="https://mitedrive.com/view/fLgH3D" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/6EPg3636-CaramelOokamitoKoushinryou2024-094FC5D28E" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 10</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1jdTmZf6LnDrAKkX1yBSRUMj_PCioEDW9/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7lVSSrYKZX" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/nmW15a" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/rcAJ9587-CaramelOokamitoKoushinryou2024-10D0D728E0" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
