--- a/proyek/aipri.html
+++ b/proyek/aipri.html
@@ -81,6 +81,14 @@
 										<a href="https://files.h4ru.my.id/1:/Himitsu%20no%20AiPri/%5BCaramel%5D%20Himitsu%20no%20AiPri%20-%2004%20%5B1080p%20E-AC-3%5D%20%5BE8DF87BB%5D.mkv" class="button"> DDL </a>
 										<a href="https://teraboxapp.com/s/1UWwEGMNLElpx61BKgkCtGw" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 5</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1_cBbZUtoxT1VUwXCa-LWJqZGs3Cvg96o/view?usp=drive_link" class="button"> GDrive </a>
+										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/Ea--1xTEyB9Cu6_kmSAeXU0BeQ9bgD9JeIC9KcOwJYM6Bg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=Iy4dPJ&download=1" class="button"> OneDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Himitsu%20no%20AiPri/%5BCaramel%5D%20Himitsu%20no%20AiPri%20-%2005%20%5B1080p%20E-AC-3%5D%20%5BF7CAE314%5D.mkv" class="button"> DDL </a>
+										<a href="https://1024terabox.com/s/10yC3ym-k43LyAVFzNfjOKQ" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
