--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -130,6 +130,14 @@
 										<a href="https://mitedrive.com/view/nmW15a" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/rcAJ9587-CaramelOokamitoKoushinryou2024-10D0D728E0" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 11</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1qpkJm7B3KgCjtORfvgE1kqNoDCdwBYCx/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7rFhMl5BVi" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/tfj0aziricds5j2o8evmti" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/b6fc5995-CaramelOokamitoKoushinryou2024-11070582D7" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
