--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -138,6 +138,14 @@
 										<a href="https://mitedrive.com/view/tfj0aziricds5j2o8evmti" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/b6fc5995-CaramelOokamitoKoushinryou2024-11070582D7" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 12</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1zWxHOJD_kopoQ6uiNZr-cAtw2TjAEjvq/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7xGBA1ZRo7" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/kbzep1jgkx7nodkepor9io" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/2Jjo3391-CaramelOokamitoKoushinryou2024-1241BB96A1" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
