--- a/proyek/sasakoi.html
+++ b/proyek/sasakoi.html
@@ -78,6 +78,13 @@
 										<a href="https://drive.google.com/file/d/1ecCK22IWeDogNaub9nd9hIXoLbCFk756/view?usp=sharing" class="button"> GDrive </a>
 										<a href="https://goaibox.com/a-sl/7V9qD2OCyu" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 5</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://mir.cr/RLIUORN5" class="button"> Mirror </a>
+										<a href="https://drive.google.com/file/d/1amXJARO35SlGPzDDgdBDOtt8vperY7_O/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/7y0DHo8BBr" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
