--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -146,6 +146,14 @@
 										<a href="https://mitedrive.com/view/kbzep1jgkx7nodkepor9io" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/2Jjo3391-CaramelOokamitoKoushinryou2024-1241BB96A1" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 13</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1c4i20GAKrWHFjv5JbWQDaJAlb24n7k6G/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/83Z6WeZfL1" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/7m98bd7o3oglt608cko9r" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/oZVB2496-CaramelOokamitoKoushinryou2024-138117D666" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
