--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -154,6 +154,14 @@
 										<a href="https://mitedrive.com/view/7m98bd7o3oglt608cko9r" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/oZVB2496-CaramelOokamitoKoushinryou2024-138117D666" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 14</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1xqVq5UFCFjkgruQRYb47s6lmzWbNkotX/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/89Br8SJ5L4" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/8ijeggzqswo79ftxeutc" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/fJNo5398-CaramelOokamitoKoushinryou2024-14AC50B700" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
