nambahin musim panas 2024

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							<ul class="actions">
 								<li>
 								<a href="http://caramel.web.id/" class="button scrolly">SITUS UTAMA</a>
-								<a href="spring2024.html" class="button scrolly">GARAPAN MUSIM INI</a>
-								<a href="proyek/kemah-santai-s3.html" class="button scrolly">GARAPAN LAMA</a>
+								<a href="summer2024.html" class="button scrolly">GARAPAN MUSIM INI</a>
+								<a href="lawas.html" class="button scrolly">GARAPAN LAMA</a>
 								</li>
 							</ul>
 							<!-- <center><style type="text/css">
