--- a/summer2024.html
+++ b/summer2024.html
@@ -33,8 +33,8 @@
 					<nav>
 						<ul>
 							<li><a href="/">BERANDA</a></li>
-							<li><a href="spring2024.html">GARAPAN MUSIM INI</a></li>
-							<li><a href="proyek/kemah-santai-s3.html">GARAPAN LAMA</a></li>
+							<li><a href="summer2024.html">GARAPAN MUSIM INI</a></li>
+							<li><a href="lawas.html">GARAPAN LAMA</a></li>
 							<li><a href="https://panel.naoti.me/embed?id=206398682172489728#accent=yellow">STATUS GARAPAN</a></li>
 							<li><a href="https://trakteer.id/caramelfansub">MAU DONASI?</a></li>
 						</ul>
@@ -56,20 +56,13 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen">
 						<div class="inner">
-							<br>
 							<ul class="actions">
 								<li>
-								<a href="spring2024.html" a class="button scrolly">Spring 2024</a>	
-								<a href="2023.html" a class="button scrolly">2023</a>
-								<a href="2022.html" a class="button scrolly">2022</a>
-								<a href="2021.html" a class="button scrolly">2021</a>
-								<a href="2020.html" a class="button scrolly">2020</a>
-								<a href="2019.html" a class="button scrolly">2019</a>
-								<a href="2018.html" a class="button scrolly">2018</a>
-								<a href="2017.html" a class="button scrolly">2017</a>
-								<a href="lawas2.html" a class="button scrolly">Sebelum 2017</a>
-								<a href="other.html" a class="button scrolly">Movie/OVA/Lainnya</a>
-								<a href="mv-pv.html" a class="button scrolly">MV/PV</a></li>
+								<a href="proyek/aipri.html" a class="button scrolly">Himitsu no AiPri</a>
+								<a href="proyek/holo-remake.html" a class="button scrolly">Ookami to Koushinryou</a>
+								<a href="proyek/dahlia.html" a class="button scrolly">Madougushi Dahlia wa Utsumukanai</a>
+								<a href="proyek/roshidere.html" a class="button scrolly">Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san</a>
+							</li>
 							</ul>
 						</div>
 					</section>
