--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -162,6 +162,14 @@
 										<a href="https://mitedrive.com/view/8ijeggzqswo79ftxeutc" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/fJNo5398-CaramelOokamitoKoushinryou2024-14AC50B700" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 15</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/19fRMOx1_HECw3bIoF0skCUCcxWxSN-fv/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/8EgHzZkwqu" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/rvpe8lmtfzsprxw7dqpho" class="button">MiteDrive</a>
+										<a href="https://qiwi.gg/file/drB37875-CaramelOokamitoKoushinryou2024-15EEB52E54" class="button"> Qiwi </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
