--- a/proyek/roshidere.html
+++ b/proyek/roshidere.html
@@ -50,15 +50,17 @@
 									<hr width="100%">
 									<ul class="actions">
 										<center>
-										<!--<li><a class="button">Episode - 1</a></li>
+										<li><a class="button">Episode - 1</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="https://drive.google.com/file/d/18hvaSkpyDYPzHdobBW0kBIcHNKuaCpWT/view?usp=sharing" class="button"> GDrive </a>
-										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/EWyw3vcgQOBJhefczXG94DAB6kvtEY2JIb-4Z2i2xGc9hA?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=OwaxZR&download=1" class="button"> OneDrive </a>
-										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2001%20%5B1080p%20x264%5D%20%5BB34BCA02%5D.mkv" class="button"> DDL </a>
-										<a href="https://1024terabox.com/s/1go5y0BFIkIkRjLt88JzDLg" class="button"> Terabox </a>
+										<a href="https://drive.google.com/file/d/1WaLFJuplc5WL8XAOctFKfJZvO7KHdDdT/view?usp=sharing" class="button"> GDrive (x264)</a>
+										<a href="https://pixeldrain.com/u/Kg83s3zP" class="button"> Pixeldrain (x264) </a>
+										<a href="https://goaibox.com/a-sl/8G7cRZrlx0" class="button"> Terabox (x264) </a>
+										<a href="https://drive.google.com/file/d/1b2C5L3yHApgUpOazRohCpjU1LL8GH2Vf/view?usp=sharing" class="button"> GDrive (x265)</a>
+										<a href="https://pixeldrain.com/u/iWEe7UYm" class="button"> Pixeldrain (x265) </a>
+										<a href="https://goaibox.com/a-sl/8G8dmdrqNY" class="button"> Terabox (x265) </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
+										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="" class="button"> Filefenix </a>
