--- a/proyek/oshinoko-s2.html
+++ b/proyek/oshinoko-s2.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Caramel] Sasayaku You ni Koi wo Utau | Arsip</title>
+		<title>[Kana] Oshi no Ko | Arsip</title>
 		<link href="../images/066.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,59 +33,33 @@
 								<ul class="actions">
 								<li><a href="../summer2024.html" class="button scrolly"><< KEMBALI</a>
 							</ul>
-									<align="left"><h2>Sasayaku You ni Koi wo Utau - Takarir Indonesia</h2>
+									<align="left"><h2>Oshi no Ko S2 - Takarir Indonesia</h2>
 									<br>
 										<div class="image left" style="clear: both; text-align: center;">
-											<img border="0" height="316" src="https://cdn.myanimelist.net/images/anime/1455/141858l.jpg" width="225" />
+											<img border="0" height="316" src="https://cdn.myanimelist.net/images/anime/1472/143303l.jpg" width="225" />
 										</div>
 										<br>
-								<p class="relawan">Penerjemah: Hitagi
-									<br>Penyunting: hayosiapa?
-									<br>Pengatur waktu: DefinitelyNotRinnn
-									<br>Typesetter: DefinitelyNotRinnn
-									<br>KFX: DefinitelyNotRinnn
-									<br>Pengolah video: Hitagi
-									<br>Penyelaras akhir: -
+								<p class="relawan">Penerjemah: Eonee
+									<br>Penyunting: Kumagawa
+									<br>Pengatur waktu: -
+									<br>Typesetter: rinnn
+									<br>KFX: WaferNabati
+									<br>Pengolah video: Eonee
+									<br>Penyelaras akhir: rinnn
 								</p>
 									<hr width="100%">
 									<ul class="actions">
 										<center>
-										<li><a class="button">Episode - 1</a></li>
+										<li><a class="button">Episode - 12 (S201)</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="https://www.mirrored.to/files/03NUMK2L/[Caramel]_Bisikkan_Aku_Senandung_Cinta_-_01_[5B87FDFF].mkv_links" class="button"> Mirror </a>
-										<a href="https://drive.google.com/file/d/1wzVcYaZmcaymuYf4tb5mrCGnRr3I679S/view?usp=sharing" class="button"> GDrive </a>
-										<a href="https://goaibox.com/a-sl/7K6FP5P3zZ" class="button"> Terabox </a>
+										<a href="https://drive.google.com/file/d/1DR4yGBGWxvBr8yz8kCk7EPz1d5LAkhxB/view?usp=sharing" class="button"> GDrive</a>
+										<a href="https://mitedrive.com/view/zi93pnqhwrbf3fq8v6uw3t" class="button"> Mitedrive </a>
+										<a href="https://pixeldrain.com/u/WAsyBsmU" class="button"> Pixeldrain </a>
+										<a href="https://goaibox.com/a-sl/8JmsAqiGif" class="button"> Terabox </a>
+										<a href="https://nyaa.si/view/1846112" class="button"> Torrent </a>
 										</p></li>
-										<li><a class="button">Episode - 2</a></li>
-										<br><br>
-										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="https://mir.cr/N1RSP1E0" class="button"> Mirror </a>
-										<a href="https://drive.google.com/file/d/1omVo-zuuuYDUaKw5LLrlUfWVok8DM9KO/view?usp=sharing" class="button"> GDrive </a>
-										<a href="https://goaibox.com/a-sl/7RSSuc2EZ0" class="button"> Terabox </a>
-										</p></li>
-										<li><a class="button">Episode - 3</a></li>
-										<br><br>
-										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="https://mir.cr/1XGCH0YD" class="button"> Mirror </a>
-										<a href="https://drive.google.com/file/d/1UXnT8V_ooipfgmCb6slDsttec8QndzUv/view?usp=sharing" class="button"> GDrive </a>
-										<a href="https://goaibox.com/a-sl/7RSbPS6q2i" class="button"> Terabox </a>
-										</p></li>
-										<li><a class="button">Episode - 4</a></li>
-										<br><br>
-										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="https://mir.cr/00DDXKQY" class="button"> Mirror </a>
-										<a href="https://drive.google.com/file/d/1ecCK22IWeDogNaub9nd9hIXoLbCFk756/view?usp=sharing" class="button"> GDrive </a>
-										<a href="https://goaibox.com/a-sl/7V9qD2OCyu" class="button"> Terabox </a>
-										</p></li>
-										<li><a class="button">Episode - 5</a></li>
-										<br><br>
-										<p style="line-height: 0.02em;" id="donlotbutton1">
-										<a href="https://mir.cr/RLIUORN5" class="button"> Mirror </a>
-										<a href="https://drive.google.com/file/d/1amXJARO35SlGPzDDgdBDOtt8vperY7_O/view?usp=sharing" class="button"> GDrive </a>
-										<a href="https://goaibox.com/a-sl/7y0DHo8BBr" class="button"> Terabox </a>
-										</p></li>
-										<!--<li><a class="button">Episode - 3</a></li>
+										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
 										<a href="" class="button"> Filefenix </a>
