fix back button

--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -31,7 +31,7 @@
 							<div class="content">
 								<div class="inner">
 								<ul class="actions">
-								<li><a href="../spring2024.html" class="button scrolly"><< KEMBALI</a>
+								<li><a href="../summer2024.html" class="button scrolly"><< KEMBALI</a>
 							</ul>
 									<align="left"><h2>Ookami to Koushinryou (2024) - Takarir Indonesia</h2>
 									<br>
