--- a/proyek/dahlia.html
+++ b/proyek/dahlia.html
@@ -58,6 +58,14 @@
 										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2001%20%5B1080p%20x264%5D%20%5BB34BCA02%5D.mkv" class="button"> DDL </a>
 										<a href="https://1024terabox.com/s/1go5y0BFIkIkRjLt88JzDLg" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1cqCntlxV5TeRYHDzug_lg1bKmjri7TSQ/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/EaEzhpxV69RLqoHVlino_DYBYM4uMKgKM1PH8FDld4gtfw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=dKcaB5&download=1" class="button"> OneDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2002%20%5B1080p%20x264%5D%20%5BB0BF8403%5D.mkv" class="button"> DDL </a>
+										<a href="https://1024terabox.com/s/1u4npdLOr_NR5YuTVe7tJPw" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
