--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -170,6 +170,14 @@
 										<a href="https://mitedrive.com/view/rvpe8lmtfzsprxw7dqpho" class="button">MiteDrive</a>
 										<a href="https://qiwi.gg/file/drB37875-CaramelOokamitoKoushinryou2024-15EEB52E54" class="button"> Qiwi </a>
 										</p></li>
+										<li><a class="button">Episode - 16</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1dGxpZCsyePGjUQfTvgIQeoP4DJ99SCFx/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/8KVW6dpt31" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/4g9nid14keqob8zdkmcsqe" class="button">MiteDrive</a>
+										<a href="https://pixeldrain.com/u/5TKdxH2y" class="button"> Pixeldrain </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
