--- a/proyek/roshidere.html
+++ b/proyek/roshidere.html
@@ -60,6 +60,16 @@
 										<a href="https://pixeldrain.com/u/iWEe7UYm" class="button"> Pixeldrain (x265) </a>
 										<a href="https://goaibox.com/a-sl/8G8dmdrqNY" class="button"> Terabox (x265) </a>
 										</p></li>
+										<li><a class="button">Episode - 2</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/17KQ2Alw58Tl1rvGhFYzvWE_UEcFeCRxL/view?usp=sharing" class="button"> GDrive (x264)</a>
+										<a href="https://pixeldrain.com/u/ojUM5vys" class="button"> Pixeldrain (x264) </a>
+										<a href="https://goaibox.com/a-sl/8MJEa1iZQ2" class="button"> Terabox (x264) </a>
+										<a href="https://drive.google.com/file/d/1DXhcDr0gNF3l0GvcGNbRKwcqVAvD8hn-/view?usp=sharing" class="button"> GDrive (x265)</a>
+										<a href="https://pixeldrain.com/u/k4pUM6fd" class="button"> Pixeldrain (x265) </a>
+										<a href="https://goaibox.com/a-sl/8MJF8H2isC" class="button"> Terabox (x265) </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
