--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -178,6 +178,14 @@
 										<a href="https://mitedrive.com/view/4g9nid14keqob8zdkmcsqe" class="button">MiteDrive</a>
 										<a href="https://pixeldrain.com/u/5TKdxH2y" class="button"> Pixeldrain </a>
 										</p></li>
+										<li><a class="button">Episode - 17</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1BfQJc8XGW3aYK9Sn0urlYuT8zSHha32l/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/8QaYfsBrSi" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/8wjh3z58v1a4x4eldvucjb" class="button">MiteDrive</a>
+										<a href="https://pixeldrain.com/u/6J9E3fS2" class="button"> Pixeldrain </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
