--- a/proyek/dahlia.html
+++ b/proyek/dahlia.html
@@ -66,6 +66,14 @@
 										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2002%20%5B1080p%20x264%5D%20%5BB0BF8403%5D.mkv" class="button"> DDL </a>
 										<a href="https://1024terabox.com/s/1u4npdLOr_NR5YuTVe7tJPw" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1Zd9xpnwGJ0evZANFDYesFheNbWLtJjYc/view?usp=drive_link" class="button"> GDrive </a>
+										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/EWc7HLvG-5hMiE5vTg2unT0BRZzkXzcZAJIsVy2JhDrQNw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=g4uvae&download=1" class="button"> OneDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2003%20%5B1080p%20x264%5D%20%5B05E01BB3%5D.mkv" class="button"> DDL </a>
+										<a href="https://1024terabox.com/s/1tBvC5qZR3KaSBnFiNODV8w" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
