--- a/proyek/roshidere.html
+++ b/proyek/roshidere.html
@@ -70,6 +70,16 @@
 										<a href="https://pixeldrain.com/u/k4pUM6fd" class="button"> Pixeldrain (x265) </a>
 										<a href="https://goaibox.com/a-sl/8MJF8H2isC" class="button"> Terabox (x265) </a>
 										</p></li>
+										<li><a class="button">Episode - 3</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1Si4eey7Da4P56BPV71CYgBUPWQXLeB5B/view?usp=sharing" class="button"> GDrive (x264)</a>
+										<a href="https://pixeldrain.com/u/k2tfSDo3" class="button"> Pixeldrain (x264) </a>
+										<a href="https://goaibox.com/a-sl/8TwvrtLHl7" class="button"> Terabox (x264) </a>
+										<a href="https://drive.google.com/file/d/1nclnF6H5HyxDbE6PT7EyS5w8k6TtmY5R/view?usp=sharing" class="button"> GDrive (x265)</a>
+										<a href="https://pixeldrain.com/u/b5XApFMZ" class="button"> Pixeldrain (x265) </a>
+										<a href="https://goaibox.com/a-sl/8TwvSpfrJJ" class="button"> Terabox (x265) </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
