--- a/proyek/holo-remake.html
+++ b/proyek/holo-remake.html
@@ -186,6 +186,14 @@
 										<a href="https://mitedrive.com/view/8wjh3z58v1a4x4eldvucjb" class="button">MiteDrive</a>
 										<a href="https://pixeldrain.com/u/6J9E3fS2" class="button"> Pixeldrain </a>
 										</p></li>
+										<li><a class="button">Episode - 18</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton2">
+										<a href="https://drive.google.com/file/d/1PHx0VdHkegQP4Ox-H2R4ujD874URXQBD/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://goaibox.com/a-sl/8VxFfBW69K" class="button"> Terabox </a>
+										<a href="https://mitedrive.com/view/h8uo2lj9vew7ue6wzr9at" class="button">MiteDrive</a>
+										<a href="https://pixeldrain.com/u/a5JfQV8o" class="button"> Pixeldrain </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 3</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
