--- a/proyek/oshinoko-s2.html
+++ b/proyek/oshinoko-s2.html
@@ -59,6 +59,15 @@
 										<a href="https://goaibox.com/a-sl/8JmsAqiGif" class="button"> Terabox </a>
 										<a href="https://nyaa.si/view/1846112" class="button"> Torrent </a>
 										</p></li>
+										<li><a class="button">Episode - 13 (S202)</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1DdnhYCkBi1Y2jCdF9hy9brzWFgvn2xn2/view?usp=drive_link" class="button"> GDrive</a>
+										<a href="https://mitedrive.com/view/horxc442lfsah2qnq5lie" class="button"> Mitedrive </a>
+										<a href="https://pixeldrain.com/u/GNmbvf6q" class="button"> Pixeldrain </a>
+										<a href="https://goaibox.com/a-sl/8XYZ1FUxde" class="button"> Terabox </a>
+										<!--<a href="https://nyaa.si/view/1846112" class="button"> Torrent </a>-->
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
