--- a/proyek/roshidere.html
+++ b/proyek/roshidere.html
@@ -80,6 +80,16 @@
 										<a href="https://pixeldrain.com/u/b5XApFMZ" class="button"> Pixeldrain (x265) </a>
 										<a href="https://goaibox.com/a-sl/8TwvSpfrJJ" class="button"> Terabox (x265) </a>
 										</p></li>
+										<li><a class="button">Episode - 4</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1qHYAkIdEJCFuHwg6N6Odu7Qis6tRUFnk/view?usp=sharing" class="button"> GDrive (x264)</a>
+										<a href="https://pixeldrain.com/u/huHEPt3d" class="button"> Pixeldrain (x264) </a>
+										<a href="https://goaibox.com/a-sl/8a0RML6RdW" class="button"> Terabox (x264) </a>
+										<a href="https://drive.google.com/file/d/1UcbWu4HajXLGsTyBduL3Z6BbQSkuiwow/view?usp=sharing" class="button"> GDrive (x265)</a>
+										<a href="https://pixeldrain.com/u/QcomPG6Y" class="button"> Pixeldrain (x265) </a>
+										<a href="https://goaibox.com/a-sl/8a0RigaXFe" class="button"> Terabox (x265) </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
