--- a/proyek/dahlia.html
+++ b/proyek/dahlia.html
@@ -82,6 +82,14 @@
 										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2004%20%5B1080p%20x264%5D%20%5BD4AEF794%5D.mkv" class="button"> DDL </a>
 										<a href="https://terabox.com/s/1tHZMRjjgeSDckQKeN9CXyQ" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 5</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1XeYUYG2g3fTXEj_XAKJB0N1797Bahy2_/view?usp=drive_link" class="button"> GDrive </a>
+										<a href="https://ly7t-my.sharepoint.com/:v:/g/personal/h4ru_ly7t_onmicrosoft_com/EUbAi8kGqJNLnKYY-qO1SVoBoX9DbCb6QXoIwR9T3BwdWw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=wZIDIa&download=1" class="button"> OneDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2005%20%5B1080p%20x264%5D%20%5B3C7C4BF8%5D.mkv" class="button"> DDL </a>
+										<a href="https://terabox.com/s/15Xxu891qq86GUl_25OpKoA" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
