--- a/proyek/dahlia.html
+++ b/proyek/dahlia.html
@@ -90,6 +90,27 @@
 										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2005%20%5B1080p%20x264%5D%20%5B3C7C4BF8%5D.mkv" class="button"> DDL </a>
 										<a href="https://terabox.com/s/15Xxu891qq86GUl_25OpKoA" class="button"> Terabox </a>
 										</p></li>
+										<li><a class="button">Episode - 6</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1nP5TitforvRD-WWxcpJ6tFrIUWAn4MAB/view?usp=sharing" class="button"> GDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2006%20%5B1080p%20x264%5D%20%5BA17646F2%5D.mkv" class="button"> DDL </a>
+										<a href="https://terabox.com/s/1c-i8ffa3QB07LEMwCDwAng" class="button"> Terabox </a>
+										</p></li>
+										<li><a class="button">Episode - 7</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1B5wJ_oD9CFvUvelxgEwrqor5piUa6r1k/view?usp=drive_link" class="button"> GDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2007%20%5B1080p%20x264%5D%20%5B55A34EE0%5D.mkv" class="button"> DDL </a>
+										<a href="https://terabox.com/s/1P7bDqVEuqSE78MOcgniERQ" class="button"> Terabox </a>
+										</p></li>
+										<li><a class="button">Episode - 8</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;" id="donlotbutton1">
+										<a href="https://drive.google.com/file/d/1Iv6jM6x_PG4oqm-cT3T2fDbJY8L03Ike/view?usp=drive_link" class="button"> GDrive </a>
+										<a href="https://files.h4ru.my.id/1:/Dahlia/%5BHaruka%5D%20Madougushi%20Dahlia%20-%2008%20%5B1080p%20x264%5D%20%5B82A42871%5D.mkv" class="button"> DDL </a>
+										<a href="https://terabox.com/s/1LAIf3utrZlcry6iag3tsag" class="button"> Terabox </a>
+										</p></li>
 										<!--<li><a class="button">Episode - 2</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;" id="donlotbutton2">
